--- a/main.css
+++ b/main.css
@@ -1,7 +1,42 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
 body {
+  font-family: "Inter";
   margin: 0;
 }
 
+header {
+  background-color: rgba(245, 245, 247, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+
+nav {
+  display: flex;
+  gap: 24px;
+}
+nav a {
+  font-size: 12px;
+  line-height: 60px;
+  letter-spacing: -0.28px;
+  color: rgba(0, 0, 0, 1);
+  text-decoration: none;
+}
+header button:nth-child(1) {
+  width: 31px;
+  height: 40px;
+  border: none;
+  background-image: url(image/h-search.png);
+  background-size: covers;
+}
+header button:nth-child(2) {
+  width: 30px;
+  height: 40px;
+  border: none;
+  background-image: url(image/h-shopbag.png);
+}
 .products {
   display: flex;
   flex-wrap: wrap;
